--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
-        "uspdev/laravel-usp-theme": "^1.0"
+        "uspdev/laravel-usp-theme": "^1.0",
+        "uspdev/replicado": "dev-master",
+        "uspdev/senhaunica-socialite": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
