categorias e criação do chamado ok

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=gjgdfjk
 SENHAUNICA_CALLBACK_ID=85
+ADMINS=2517070,5385361,3426504
