--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "^6.0",
         "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
-        "uspdev/laravel-usp-theme": "^1.0",
+        "uspdev/laravel-usp-theme": "dev-master",
         "uspdev/replicado": "dev-master",
         "uspdev/senhaunica-socialite": "^2.0"
     },
