--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=SisInfo
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -47,3 +47,13 @@ SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=gjgdfjk
 SENHAUNICA_CALLBACK_ID=85
 ADMINS=2517070,5385361,3426504
+ATENDENTES=5385361,2517070,3426504,3426511,2479057,2807855,7098274,4988966,2989060,4780673,9827360
+
+# false or true
+USAR_REPLICADO=false
+REPLICADO_HOST=
+REPLICADO_PORT=
+REPLICADO_DATABASE=
+REPLICADO_USERNAME=
+REPLICADO_PASSWORD=
+REPLICADO_CODUND=
