--- a/.env.example
+++ b/.env.example
@@ -44,16 +44,19 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SENHAUNICA_KEY=fflch_sti
-SENHAUNICA_SECRET=gjgdfjk
-SENHAUNICA_CALLBACK_ID=85
+SENHAUNICA_SECRET=
+SENHAUNICA_CALLBACK_ID=1
+SENHAUNICA_DEV=yes
+
+
 ADMINS=2517070,5385361,3426504
 ATENDENTES=5385361,2517070,3426504,3426511,2479057,2807855,7098274,4988966,2989060,4780673,9827360,2431867
 
 # false or true
-USAR_REPLICADO=false
-REPLICADO_HOST=
-REPLICADO_PORT=
-REPLICADO_DATABASE=
-REPLICADO_USERNAME=
+USAR_REPLICADO=true
+REPLICADO_HOST=cloud.fflch.usp.br
+REPLICADO_PORT=5005
+REPLICADO_DATABASE=fflch
+REPLICADO_USERNAME=fflchdev
 REPLICADO_PASSWORD=
-REPLICADO_CODUND=
+REPLICADO_CODUNDCLG=8
