--- a/composer.json
+++ b/composer.json
@@ -7,28 +7,25 @@
         "laravel"
     ],
     "license": "MIT",
-    "repositories": {
-        "replicado": {
-            "type": "git",
-            "url": "https://github.com/uspdev/replicado.git"
-        }
-	},
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/socialite": "^4.2",
-        "laravel/tinker": "^1.0",
-        "uspdev/laravel-usp-theme": "dev-master",
-        "uspdev/replicado": "dev-master",
+        "php": "^7.2.5",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
+        "uspdev/laravel-usp-faker": "^1.0",
+        "uspdev/laravel-usp-theme": "^1.0",
+        "uspdev/laravel-usp-validators": "^1.0",
+        "uspdev/replicado": "^1.5",
         "uspdev/senhaunica-socialite": "^2.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
