fix 31 cria tabela setores e
respectivo crud

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/ui": "^3.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.0",
+        "laravelcollective/html": "^6.2",
         "uspdev/laravel-usp-faker": "^1.0",
         "uspdev/laravel-usp-theme": "^1.0",
         "uspdev/laravel-usp-validators": "^1.0",
