--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "laravel/laravel",
+    "name": "Uspdev/chamados",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Chamados",
     "keywords": [
-        "framework",
-        "laravel"
+        "chamado",
+        "atendimento"
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
