--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=SisInfo
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000/
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
@@ -46,7 +46,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=1
-SENHAUNICA_DEV=yes
+#SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
 
 
 ADMINS=2517070,5385361,3426504
