--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
 APP_NAME=SisInfo
-APP_ENV=local
 APP_KEY=
+
+# Em produção é desejável APP_ENV=production e APP_DEBUG=false
+APP_ENV=local
 APP_DEBUG=true
+
 APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
+# Testado em mysql e sqlite
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -48,8 +52,10 @@ SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=1
 #SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
 
-
+# Para carregar admin pelo env 
+# coloque o codpes e faça o login novamente
 ADMINS=2517070,5385361,3426504
+
 ATENDENTES=5385361,2517070,3426504,3426511,2479057,2807855,7098274,4988966,2989060,4780673,9827360,2431867
 
 # false or true
