--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Uspdev/chamados",
+    "name": "uspdev/chamados",
     "type": "project",
     "description": "Chamados",
     "keywords": [
