remove partes desnecessárias

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=SisInfo
+APP_NAME=Chamados
 APP_KEY=
 
 # Em produção é desejável APP_ENV=production e APP_DEBUG=false
@@ -52,17 +52,13 @@ SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=1
 #SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
 
-# Para carregar admin pelo env 
-# coloque o codpes e faça o login novamente
-ADMINS=2517070,5385361,3426504
-
-ATENDENTES=5385361,2517070,3426504,3426511,2479057,2807855,7098274,4988966,2989060,4780673,9827360,2431867
+# admins
+ADMINS=10001,20001
 
 # false or true
-USAR_REPLICADO=true
-REPLICADO_HOST=cloud.fflch.usp.br
-REPLICADO_PORT=5005
-REPLICADO_DATABASE=fflch
-REPLICADO_USERNAME=fflchdev
+REPLICADO_HOST=
+REPLICADO_PORT=
+REPLICADO_DATABASE=
+REPLICADO_USERNAME=
 REPLICADO_PASSWORD=
-REPLICADO_CODUNDCLG=8
+REPLICADO_CODUNDCLG=
