--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "graham-campbell/markdown": "^13.1",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
