update para skin e outros

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,17 @@ APP_DEBUG=true
 
 APP_URL=http://127.0.0.1:8000
 
+# O php.ini tem de permitir esse tamanho também
 APP_UPLOAD_MAX_FILESIZE = 16M
+
+# codpes dos admins do sistema
+ADMINS=10001,20001
+
+# false or true
+USAR_REPLICADO=true
+
+# Personalizacao do theme
+USP_THEME_SKIN=
 
 LOG_CHANNEL=stack
 
@@ -29,6 +39,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Em teste pode usar MAIL_DRIVER=log
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
@@ -49,15 +60,13 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# Credenciais para senha unica
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=1
 #SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
 
-# admins
-ADMINS=10001,20001
-
-# false or true
+# Credenciais para replicado
 REPLICADO_HOST=
 REPLICADO_PORT=
 REPLICADO_DATABASE=
