habilitando modal para criar filas

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,9 @@ SENHAUNICA_CALLBACK_ID=1
 # admins
 ADMINS=10001,20001
 
+#skins (requer LARAVEL-USP-THEME v2)
+#USP_THEME_SKIN=eesc
+
 # false or true
 REPLICADO_HOST=
 REPLICADO_PORT=
