--- a/.env.example
+++ b/.env.example
@@ -40,12 +40,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # Em teste pode usar MAIL_DRIVER=log
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -70,7 +72,7 @@ SENHAUNICA_CALLBACK_ID=1
 ADMINS=10001,20001
 
 #skins (requer LARAVEL-USP-THEME v2)
-#USP_THEME_SKIN=eesc
+USP_THEME_SKIN=
 
 # false or true
 # Credenciais para replicado
