Comentário no .env sobre o limite de upload de arquivos e ajuste no registro de log, quando adiciona várias imagens gera um único log

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
 # O php.ini tem de permitir esse tamanho também
+# Definir o parâmetro em MB, o padrão é 16MB (se não estiver definido valor algum)
 APP_UPLOAD_MAX_FILESIZE = 16M
 
 # codpes dos admins do sistema
