--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,35 @@
 APP_NAME=Chamados
+APP_URL=http://127.0.0.1:8000
+
+# gerar com: php artisan key:generate
 APP_KEY=
 
-# Em produção é desejável APP_ENV=production e APP_DEBUG=false
+# Em ambiente de teste/desenvolviemnto
 APP_ENV=local
 APP_DEBUG=true
 
-APP_URL=http://127.0.0.1:8000
+# Em ambiente de produção 
+#APP_ENV=production
+#APP_DEBUG=false
+
+#########################################
+#### Variáveis da aplicação #############
 
 # O php.ini tem de permitir esse tamanho também
 # Definir o parâmetro em MB, o padrão é 16MB (se não estiver definido valor algum)
 APP_UPLOAD_MAX_FILESIZE = 16M
 
-# codpes dos admins do sistema
+# Personalizacao do theme - skins (requer LARAVEL-USP-THEME v2)
+# crie seu skin em https://github.com/uspdev/laravel-usp-theme
+USP_THEME_SKIN=uspdev # default
+
+# Codpes dos admins que serão cadastrados no BD
 ADMINS=10001,20001
 
 # false or true
 USAR_REPLICADO=true
 
-# Personalizacao do theme
-USP_THEME_SKIN=
-
-LOG_CHANNEL=stack
-
-# Testado em mysql e sqlite
+# Databse - Testado em mysql e sqlite
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -30,18 +37,10 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+# Envio de emails
+MAIL_MAILER=log # ambinete de testes
+#MAIL_MAILER=smtp # em produção
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-# Em teste pode usar MAIL_DRIVER=log
-MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
@@ -49,6 +48,35 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
+# Credenciais para senha única USP
+SENHAUNICA_KEY=fflch_sti
+SENHAUNICA_SECRET=
+SENHAUNICA_CALLBACK_ID=1
+#SENHAUNICA_DEV=no
+#SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
+
+# Credenciais para replicado se USAR_REPLICADO=true
+REPLICADO_HOST=
+REPLICADO_PORT=
+REPLICADO_DATABASE=
+REPLICADO_USERNAME=
+REPLICADO_PASSWORD=
+REPLICADO_CODUNDCLG=
+
+#### Outras configurações ####
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+LOG_CHANNEL=stack
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -62,25 +90,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-# Credenciais para senha unica
-SENHAUNICA_KEY=fflch_sti
-SENHAUNICA_SECRET=
-SENHAUNICA_CALLBACK_ID=1
-#SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
-
-# admins
-ADMINS=10001,20001
-
-#skins (requer LARAVEL-USP-THEME v2)
-USP_THEME_SKIN=
-
-# false or true
-# Credenciais para replicado
-REPLICADO_HOST=
-REPLICADO_PORT=
-REPLICADO_DATABASE=
-REPLICADO_USERNAME=
-REPLICADO_PASSWORD=
-REPLICADO_CODUNDCLG=
-USAR_REPLICADO=true
