corrigindo warning no composer install

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
 APP_NAME=Chamados
 APP_URL=http://127.0.0.1:8000
 
-# gerar com: php artisan key:generate
-APP_KEY=
-
 # Em ambiente de teste/desenvolviemnto
 APP_ENV=local
 APP_DEBUG=true
@@ -17,7 +14,7 @@ APP_DEBUG=true
 
 # O php.ini tem de permitir esse tamanho também
 # Definir o parâmetro em MB, o padrão é 16MB (se não estiver definido valor algum)
-APP_UPLOAD_MAX_FILESIZE = 16M
+APP_UPLOAD_MAX_FILESIZE=16
 
 # Personalizacao do theme - skins (requer LARAVEL-USP-THEME v2)
 # crie seu skin em https://github.com/uspdev/laravel-usp-theme
@@ -28,6 +25,9 @@ ADMINS=10001,20001
 
 # false or true
 USAR_REPLICADO=true
+
+# gerar com: php artisan key:generate
+APP_KEY=
 
 # Databse - Testado em mysql e sqlite
 DB_CONNECTION=mysql
