--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,12 @@ APP_URL=http://127.0.0.1:8000
 APP_ENV=local
 APP_DEBUG=true
 
-# Em ambiente de produção 
-#APP_ENV=production
-#APP_DEBUG=false
+# Em ambiente de produção
+# APP_ENV=production
+# APP_DEBUG=false
 
-#########################################
-#### Variáveis da aplicação #############
+# ########################################
+# ### Variáveis da aplicação #############
 
 # O php.ini tem de permitir esse tamanho também
 # Definir o parâmetro em MB, o padrão é 16MB (se não estiver definido valor algum)
@@ -38,8 +38,8 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 # Envio de emails
-MAIL_MAILER=log # ambinete de testes
-#MAIL_MAILER=smtp # em produção
+MAIL_MAILER="log" # ambinete de testes
+# MAIL_MAILER=smtp # em produção
 
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
@@ -53,8 +53,8 @@ MAIL_FROM_NAME="${APP_NAME}"
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=1
-#SENHAUNICA_DEV=no
-#SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
+# SENHAUNICA_DEV=no
+# SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
 
 # Credenciais para replicado se USAR_REPLICADO=true
 REPLICADO_HOST=
@@ -63,8 +63,15 @@ REPLICADO_DATABASE=
 REPLICADO_USERNAME=
 REPLICADO_PASSWORD=
 REPLICADO_CODUNDCLG=
+# Em geral é somente para sybase mas dependendo da configuração do
+# MSSQL também pode precisar disso. Implica na conversão de UTF e no trimRecursivo
+REPLICADO_SYBASE=1
 
-#### Outras configurações ####
+# Veja configuração em (https://github.com/uspdev/cache) pois precisa do memcached
+# Em ambiente de testes é legal não usar cache
+REPLICADO_USAR_CACHE=0
+
+# ### Outras configurações ####
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
