revisao da documentação

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-APP_NAME=Chamados
+# O nome da aplicação aparecerá à esquerda na barra de menus
+APP_NAME="Chamados"
+
+# se usar o servidor interno do laravel use essa URL
 APP_URL=http://127.0.0.1:8000
 
 # Em ambiente de teste/desenvolviemnto
@@ -13,23 +16,24 @@ APP_DEBUG=true
 # ### Variáveis da aplicação #############
 
 # O php.ini tem de permitir esse tamanho também
-# Definir o parâmetro em MB, o padrão é 16MB (se não estiver definido valor algum)
+# Definir o parâmetro em MB, o padrão aqui é 16MB (se não estiver definido valor algum)
 APP_UPLOAD_MAX_FILESIZE=16
 
-# Personalizacao do theme - skins (requer LARAVEL-USP-THEME v2)
-# crie seu skin em https://github.com/uspdev/laravel-usp-theme
-USP_THEME_SKIN=uspdev # default
+# Personalizacao do theme - skins
+# Se sua unidade não tem um skin use o "uspdev" que é o padrão.
+# Se preferir crie uma skin em https://github.com/uspdev/laravel-usp-theme
+# para que o Chamados fique combinando com seus outros sistemas
+USP_THEME_SKIN="uspdev"
 
 # Codpes dos admins que serão cadastrados no BD
+# O cadastro acontece no primeiro acesso do usuário.
+# Depois disso não é mais necessário aqui.
 ADMINS=10001,20001
 
-# false or true
-USAR_REPLICADO=true
-
-# gerar com: php artisan key:generate
+# gerar com: php artisan key:generate ############
 APP_KEY=
 
-# Databse - Testado em mysql e sqlite
+# Databse - Testado em mysql e sqlite ###########
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -37,32 +41,54 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-# Envio de emails
+# Envio de emails ###############################
+
+# Se usar log, nenhum email é enviado, todos serão direcionados para
+# storage/logs/laravel-yyyy-mm-dd.log
 MAIL_MAILER="log" # ambinete de testes
-# MAIL_MAILER=smtp # em produção
+
+# Se utilizar o gmail
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=465
+# MAIL_ENCRYPTION=ssl
 
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
+MAIL_ENCRYPTION=null
+
+# As credenciais do email dependendo do serviço
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-# Credenciais para senha única USP
+# Senha única #######################
+
+# Se utilizar senhaunica-faker (http://github.com/uspdev/senhaunica-faker) use:
+# SENHAUNICA_DEV=yes
+# SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
+
+# Em produção, forneça as credenciais
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=1
-# SENHAUNICA_DEV=no
-# SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
+SENHAUNICA_DEV=no
 
-# Credenciais para replicado se USAR_REPLICADO=true
+
+# Replicado (https://github.com/uspdev/replicado) ########
+
+# false or true
+USAR_REPLICADO=true
+
+# Se USAR_REPLICADO=true, forneças as credenciais
 REPLICADO_HOST=
 REPLICADO_PORT=
 REPLICADO_DATABASE=
 REPLICADO_USERNAME=
 REPLICADO_PASSWORD=
 REPLICADO_CODUNDCLG=
+
 # Em geral é somente para sybase mas dependendo da configuração do
 # MSSQL também pode precisar disso. Implica na conversão de UTF e no trimRecursivo
 REPLICADO_SYBASE=1
@@ -71,11 +97,25 @@ REPLICADO_SYBASE=1
 # Em ambiente de testes é legal não usar cache
 REPLICADO_USAR_CACHE=0
 
-# ### Outras configurações ####
+# Arquivo onde o replicado vai gravar os logs
+REPLICADO_PATHLOG="/home/sistemas/chamados/storage/logs/replicado.log"
+
+
+# Uso de filas #############################################
+
+# Em produção,depende de Supervisor instalado para processar a fila.
+# Em ambiente dev, pode subir um processo com
+# php artisan queue:listen
+# ou usar
+# QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
+
+
+# Outras configurações não usadas ##################
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
