opção para forçar https

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,9 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
+# Forçar o uso de https ##########
+FORCAR_HTTPS=0
+
 # Senha única #######################
 
 # Se utilizar senhaunica-faker (http://github.com/uspdev/senhaunica-faker) use:
