criando painel de admin basico

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,11 @@ APP_DEBUG=true
 
 # O php.ini tem de permitir esse tamanho também
 # Definir o parâmetro em MB, o padrão aqui é 16MB (se não estiver definido valor algum)
-APP_UPLOAD_MAX_FILESIZE=16
+UPLOAD_MAX_FILESIZE=16
+
+# Se a aplicação está atrás de um proxy que conecta com o usuário por https 
+# mas conecta com a aplicação por http, você deve habilitar essa flag
+FORCAR_HTTPS=0
 
 # Personalizacao do theme - skins
 # Se sua unidade não tem um skin use o "uspdev" que é o padrão.
