--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,17 @@
         "fruitcake/laravel-cors": "^1.0",
         "graham-campbell/markdown": "^13.1",
         "guzzlehttp/guzzle": "^7.0",
+        "haruncpi/laravel-log-reader": "^1.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "laravelcollective/html": "^6.2",
+        "masakik/supervisor": "dev-master",
         "uspdev/laravel-usp-faker": "^1.0",
         "uspdev/laravel-usp-theme": "^2.0",
         "uspdev/laravel-usp-validators": "^1.0",
         "uspdev/replicado": "^1.5",
-        "uspdev/senhaunica-socialite": "^2.0",
-        "masakik/supervisor": "dev-master"
+        "uspdev/senhaunica-socialite": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
