update para senhaunica v3 e theme v2.1

--- a/.env.example
+++ b/.env.example
@@ -29,11 +29,6 @@ FORCAR_HTTPS=0
 # para que o Chamados fique combinando com seus outros sistemas
 USP_THEME_SKIN="uspdev"
 
-# Codpes dos admins que serão cadastrados no BD
-# O cadastro acontece no primeiro acesso do usuário.
-# Depois disso não é mais necessário aqui.
-ADMINS=10001,20001
-
 # gerar com: php artisan key:generate ############
 APP_KEY=
 
@@ -72,15 +67,21 @@ FORCAR_HTTPS=0
 
 # Senha única #######################
 
-# Se utilizar senhaunica-faker (http://github.com/uspdev/senhaunica-faker) use:
-# SENHAUNICA_DEV=yes
-# SENHAUNICA_DEV="http://localhost:8001/wsusuario/oauth"
-
-# Em produção, forneça as credenciais
+# SENHAUNICA-SOCIALITE
+# https://github.com/uspdev/senhaunica-socialite
 SENHAUNICA_KEY=fflch_sti
-SENHAUNICA_SECRET=
-SENHAUNICA_CALLBACK_ID=1
-SENHAUNICA_DEV=no
+SENHAUNICA_SECRET=sua_super_chave_segura
+SENHAUNICA_CALLBACK_ID=85
+
+# URL do servidor oauth no ambiente de dev
+#SENHAUNICA_DEV="https://dev.uspdigital.usp.br/wsusuario/oauth"
+
+# Habilite para salvar o retorno em storage/app/debug/oauth/
+#SENHAUNICA_DEBUG=true
+
+# Esses usuários terão privilégios especiais
+#SENHAUNICA_ADMINS=11111,22222,33333
+#SENHAUNICA_GERENTES=4444,5555,6666
 
 
 # Replicado (https://github.com/uspdev/replicado) ########
