atualizando para senhaunica 4

--- a/.env.example
+++ b/.env.example
@@ -65,24 +65,33 @@ MAIL_FROM_NAME="${APP_NAME}"
 # Forçar o uso de https ##########
 FORCAR_HTTPS=0
 
-# Senha única #######################
-
-# SENHAUNICA-SOCIALITE
+# SENHAUNICA-SOCIALITE ######################################
 # https://github.com/uspdev/senhaunica-socialite
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=sua_super_chave_segura
 SENHAUNICA_CALLBACK_ID=85
 
-# URL do servidor oauth no ambiente de dev
+# URL do servidor oauth no ambiente de dev (default: no)
 #SENHAUNICA_DEV="https://dev.uspdigital.usp.br/wsusuario/oauth"
 
-# Habilite para salvar o retorno em storage/app/debug/oauth/
-#SENHAUNICA_DEBUG=true
+# URL do servidor oauth para uso com senhaunica-faker
+#SENHAUNICA_DEV="http://127.0.0.1:3141/wsusuario/oauth"
 
 # Esses usuários terão privilégios especiais
 #SENHAUNICA_ADMINS=11111,22222,33333
 #SENHAUNICA_GERENTES=4444,5555,6666
 
+# Se os logins forem limitados a usuários cadastrados (onlyLocalUsers=true),
+# pode ser útil cadastrá-los aqui.
+#SENHAUNICA_USERS=777,888
+
+# Se true, os privilégios especiais serão revogados ao remover da lista (default: false)
+#SENHAUNICA_DROP_PERMISSIONS=true
+
+# Habilite para salvar o retorno em storage/app/debug/oauth/ (default: false)
+#SENHAUNICA_DEBUG=true
+
+# SENHAUNICA-SOCIALITE ######################################
 
 # Replicado (https://github.com/uspdev/replicado) ########
 
@@ -106,7 +115,7 @@ REPLICADO_SYBASE=1
 REPLICADO_USAR_CACHE=0
 
 # Arquivo onde o replicado vai gravar os logs
-REPLICADO_PATHLOG="/home/sistemas/chamados/storage/logs/replicado.log"
+REPLICADO_PATHLOG="../storage/logs/replicado.log"
 
 
 # Uso de filas #############################################
