Add lando files on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,13 @@ public/vendor/
 /sandbox
 
 test.db
+
+# init lando
+.lando.yml
+# lando dockerfile php extensions
+Dockerfile.custom
+# lando php.ini
+php.ini
+
+# vim bkp
+*.*~
