preparacao para link com sistema patrimonio

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,11 @@ UPLOAD_MAX_FILESIZE=16
 # mas conecta com a aplicação por http, você deve habilitar essa flag
 FORCAR_HTTPS=0
 
+# Informar a URL do sistema de patrimonios, caso queira usar.
+# Vai aparecer nos detalhes de bens patrimoniais, no card patrimonio (precisa de replicado).
+# https://github.com/uspdev/patrimonio-complementar
+SISTEMA_PATRIMONIO="http://url_do_sistema"
+
 # Personalizacao do theme - skins
 # Se sua unidade não tem um skin use o "uspdev" que é o padrão.
 # Se preferir crie uma skin em https://github.com/uspdev/laravel-usp-theme
