reorganizando para formato mais convencional

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,20 @@
-# O nome da aplicação aparecerá à esquerda na barra de menus
 APP_NAME="Chamados"
-
-# se usar o servidor interno do laravel use essa URL
-APP_URL=http://127.0.0.1:8000
-
-# Em ambiente de teste/desenvolviemnto
+APP_KEY=
 APP_ENV=local
 APP_DEBUG=true
-
-# Em ambiente de produção
-# APP_ENV=production
-# APP_DEBUG=false
+APP_URL=http://127.0.0.1:8000
 
 # ########################################
 # ### Variáveis da aplicação #############
 
 # O php.ini tem de permitir esse tamanho também
+# upload_max_filesize e post_max_size
 # Definir o parâmetro em MB, o padrão aqui é 16MB (se não estiver definido valor algum)
 UPLOAD_MAX_FILESIZE=16
 
-# Se a aplicação está atrás de um proxy que conecta com o usuário por https 
+# Se a aplicação está atrás de um proxy que conecta com o usuário por https
 # mas conecta com a aplicação por http, você deve habilitar essa flag
+######## Deprecado em favor de LARAVEL_TOOLS_FORCAR_HTTPS (2/2023) ############
 FORCAR_HTTPS=0
 
 # Informar a URL do sistema de patrimonios, caso queira usar.
@@ -28,14 +22,10 @@ FORCAR_HTTPS=0
 # https://github.com/uspdev/patrimonio-complementar
 SISTEMA_PATRIMONIO="http://url_do_sistema"
 
-# Personalizacao do theme - skins
-# Se sua unidade não tem um skin use o "uspdev" que é o padrão.
-# Se preferir crie uma skin em https://github.com/uspdev/laravel-usp-theme
-# para que o Chamados fique combinando com seus outros sistemas
-USP_THEME_SKIN="uspdev"
+# Configura o sistema para usar ou não o replicado.
+# Se true, é necessário configurá-lo mais abaixo. (default=true)
+USAR_REPLICADO=true
 
-# gerar com: php artisan key:generate ############
-APP_KEY=
 
 # Databse - Testado em mysql e sqlite ###########
 DB_CONNECTION=mysql
@@ -46,6 +36,8 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 # Envio de emails ###############################
+# Para funcionar adequadamente precisa configurar
+# supervisord ou equivalente. Veja o readme.md
 
 # Se usar log, nenhum email é enviado, todos serão direcionados para
 # storage/logs/laravel-yyyy-mm-dd.log
@@ -67,16 +59,26 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-# Forçar o uso de https ##########
-FORCAR_HTTPS=0
+
+# LARAVEL-USP-THEME ######################################
+# https://github.com/uspdev/laravel-usp-theme
+
+# O laravel-usp-theme permite que seja criado links
+# para outras aplicações da unidade
+#USP_THEME_SISTEMAS_1='{"text":"Pessoas","url":"http://localhost/pessoas"}'
+#USP_THEME_SISTEMAS_2='{"text":"LDAP","url":"http://localhost/ldap"}'
+
+# Escolha o skin a ser utilizado (default=uspdev)
+USP_THEME_SKIN=
 
 # SENHAUNICA-SOCIALITE ######################################
 # https://github.com/uspdev/senhaunica-socialite
+
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=sua_super_chave_segura
 SENHAUNICA_CALLBACK_ID=85
 
-# URL do servidor oauth no ambiente de dev (default: no)
+# URL do servidor oauth no ambiente de dev (default=no)
 #SENHAUNICA_DEV="https://dev.uspdigital.usp.br/wsusuario/oauth"
 
 # URL do servidor oauth para uso com senhaunica-faker
@@ -90,37 +92,57 @@ SENHAUNICA_CALLBACK_ID=85
 # pode ser útil cadastrá-los aqui.
 #SENHAUNICA_USERS=777,888
 
-# Se true, os privilégios especiais serão revogados ao remover da lista (default: false)
-#SENHAUNICA_DROP_PERMISSIONS=true
+# Se true, os privilégios especiais serão revogados ao remover da lista (default=false)
+#SENHAUNICA_DROP_PERMISSIONS=
 
-# Habilite para salvar o retorno em storage/app/debug/oauth/ (default: false)
-#SENHAUNICA_DEBUG=true
+# Habilite para salvar o retorno em storage/app/debug/oauth/ (default=false)
+#SENHAUNICA_DEBUG=
 
-# SENHAUNICA-SOCIALITE ######################################
+# LARAVEL-REPLICADO #########################################
+# https://github.com/uspdev/laravel-replicado
+# https://github.com/uspdev/replicado
 
-# Replicado (https://github.com/uspdev/replicado) ########
-
-# false or true
-USAR_REPLICADO=true
-
-# Se USAR_REPLICADO=true, forneças as credenciais
 REPLICADO_HOST=
 REPLICADO_PORT=
 REPLICADO_DATABASE=
 REPLICADO_USERNAME=
 REPLICADO_PASSWORD=
+
+# Código da unidade
 REPLICADO_CODUNDCLG=
 
-# Em geral é somente para sybase mas dependendo da configuração do
-# MSSQL também pode precisar disso. Implica na conversão de UTF e no trimRecursivo
-REPLICADO_SYBASE=1
+# Todos os códigos de colegiados da unidade, separados por vírgula
+REPLICADO_CODUNDCLGS=${REPLICADO_CODUNDCLG}
 
-# Veja configuração em (https://github.com/uspdev/cache) pois precisa do memcached
-# Em ambiente de testes é legal não usar cache
-REPLICADO_USAR_CACHE=0
+# Caminho do log (default=base_path('storage/logs/replicado.log'))
+#REPLICADO_PATHLOG=
 
-# Arquivo onde o replicado vai gravar os logs
-REPLICADO_PATHLOG="../storage/logs/replicado.log"
+# Converte de/para UTF-8 (default=true)
+#REPLICADO_SYBASE=
+
+# habilita o uso do cache https://github.com/uspdev/cache (default=0)
+# É necessário configurar a biblioteca antes de usar
+#REPLICADO_USAR_CACHE=
+
+# Tempo de expiração do cache (default=-1 -> default da biblioteca=1440 (s))
+#REPLICADO_CACHE_EXPIRY=
+
+# Tamanho mínimo para cachear (default=-1 -> default da bibloteca=32 (bytes))
+#REPLICADO_CACHE_SMALL=
+
+# Se true mostra o retorno de erros do BD (default=APP_DEBUG)
+#REPLICADO_DEBUG=
+
+
+# LARAVEL TOOLS #########################################
+# https://github.com/uspdev/laravel-tools
+
+# Se sua aplicação está atrás de um proxy e se comunica com o proxy por http mas o proxy
+# se comunica com o usuário por https, vc deve forçar o https no laravel (default = false).
+#LARAVEL_TOOLS_FORCAR_HTTPS=false
+
+# Ativa mensagens de debug (default = app.debug)
+#LARAVEL_TOOLS_DEBUG=
 
 
 # Uso de filas #############################################
