documentando mudança do replicado

--- a/.env.example
+++ b/.env.example
@@ -133,6 +133,8 @@ REPLICADO_CODUNDCLGS=${REPLICADO_CODUNDCLG}
 # Se true mostra o retorno de erros do BD (default=APP_DEBUG)
 #REPLICADO_DEBUG=
 
+# Nível de detalhes a ser feito log: 1 = somente erros (default), 2 = gera log das queries executadas
+#REPLICADO_DEBUG_LEVEL=
 
 # LARAVEL TOOLS #########################################
 # https://github.com/uspdev/laravel-tools
