inclui link para sistema pessoas #353

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# update em 2/2/2024
+
 APP_NAME="Chamados"
 APP_KEY=
 APP_ENV=local
@@ -21,6 +23,12 @@ FORCAR_HTTPS=0
 # Vai aparecer nos detalhes de bens patrimoniais, no card patrimonio (precisa de replicado).
 # https://github.com/uspdev/patrimonio-complementar
 SISTEMA_PATRIMONIO="http://url_do_sistema"
+
+# Informar a URL do sistema de pessoas, caso queira usar.
+# Vai aparecer nos detalhes das pessoas, em todos os locais disponíveis.
+# https://github.com/uspdev/pessoas
+SISTEMA_PESSOAS="https://url_do_sistema"
+
 
 # Configura o sistema para usar ou não o replicado.
 # Se true, é necessário configurá-lo mais abaixo. (default=true)
