atualizando para novas versões das bibliotecas uspdev

--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,7 @@ USP_THEME_SKIN=
 # SENHAUNICA-SOCIALITE ######################################
 # https://github.com/uspdev/senhaunica-socialite
 
+# Credenciais/informações do oauth
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=sua_super_chave_segura
 SENHAUNICA_CALLBACK_ID=85
@@ -91,6 +92,11 @@ SENHAUNICA_CALLBACK_ID=85
 
 # URL do servidor oauth para uso com senhaunica-faker
 #SENHAUNICA_DEV="http://127.0.0.1:3141/wsusuario/oauth"
+
+# Desabilite para não salvar o retorno do oauth em storage/app/debug/oauth/ (default=true)
+#SENHAUNICA_DEBUG=
+
+# AS CONFIGURAÇÕES A SEGUIR são relevantes se permission=true
 
 # Esses usuários terão privilégios especiais
 #SENHAUNICA_ADMINS=11111,22222,33333
@@ -103,8 +109,9 @@ SENHAUNICA_CALLBACK_ID=85
 # Se true, os privilégios especiais serão revogados ao remover da lista (default=false)
 #SENHAUNICA_DROP_PERMISSIONS=
 
-# Habilite para salvar o retorno em storage/app/debug/oauth/ (default=false)
-#SENHAUNICA_DEBUG=
+# Código da unidade para identificar os logins próprios ou de outras unidades
+SENHAUNICA_CODIGO_UNIDADE=
+
 
 # LARAVEL-REPLICADO #########################################
 # https://github.com/uspdev/laravel-replicado
