mais comentários no .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# update em 2/2/2024
+# último update em 02/09/2024
 
 APP_NAME="Chamados"
 APP_KEY=
-APP_ENV=local
+APP_ENV=local    # valores possíveis: local ou production
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
@@ -49,7 +49,7 @@ DB_PASSWORD=
 
 # Se usar log, nenhum email é enviado, todos serão direcionados para
 # storage/logs/laravel-yyyy-mm-dd.log
-MAIL_MAILER="log" # ambinete de testes
+MAIL_MAILER="log"    # valores possíveis: smtp ou log
 
 # Se utilizar o gmail
 # MAIL_MAILER=smtp
