permite configurar campos do chamado para serem exibidos no lado esquerdo da tela (interessante para, por exemplo, o campo 'tipo de atendimento')

--- a/.env.example
+++ b/.env.example
@@ -172,6 +172,9 @@ REPLICADO_CODUNDCLGS=${REPLICADO_CODUNDCLG}
 QUEUE_CONNECTION=database
 
 
+# quais campos de criação de um novo chamado desejo exibir na coluna da esquerda
+CHAMADO_CAMPOS_A_ESQUERDA=
+
 # Outras configurações não usadas ##################
 
 BROADCAST_DRIVER=log
