--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.1",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "glorand/laravel-model-settings": "^4.2",
-        "graham-campbell/markdown": "^13.1",
+        "glorand/laravel-model-settings": "^8.0",
+        "graham-campbell/markdown": "^16.0",
         "guzzlehttp/guzzle": "^7.0",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^10.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0",
-        "laravelcollective/html": "^6.2",
+        "laravel/ui": "^4.6",
+        "laravelcollective/html": "*",
         "masakik/supervisor": "dev-master",
-        "spatie/simple-excel": "^1.13",
+        "spatie/simple-excel": "^3.7",
         "uspdev/laravel-replicado": "^1.0",
         "uspdev/laravel-tools": "^1.3",
         "uspdev/laravel-usp-theme": "^2.8",
@@ -27,12 +25,11 @@
         "uspdev/senhaunica-socialite": "^4.3"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.10",
         "lucascudo/laravel-pt-br-localization": "^1.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
         "uspdev/laravel-usp-faker": "^1.0"
     },
     "repositories": [
