--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.1",
-        "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "glorand/laravel-model-settings": "^4.2",
         "graham-campbell/markdown": "^13.1",
         "guzzlehttp/guzzle": "^7.0",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "laravelcollective/html": "^6.2",
@@ -27,11 +26,11 @@
         "uspdev/senhaunica-socialite": "^4.3"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.10",
         "lucascudo/laravel-pt-br-localization": "^1.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0",
         "uspdev/laravel-usp-faker": "^1.0"
     },
