--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,16 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "glorand/laravel-model-settings": "^4.2",
-        "graham-campbell/markdown": "^13.1",
+        "php": "^8.2",
+        "glorand/laravel-model-settings": "^8.0",
+        "graham-campbell/markdown": "^16.0",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.0",
-        "laravelcollective/html": "^6.2",
+        "spatie/laravel-html": "^3.12",
         "masakik/supervisor": "dev-master",
-        "spatie/simple-excel": "^1.13",
+        "spatie/simple-excel": "^3.8",
         "uspdev/laravel-replicado": "^1.0",
         "uspdev/laravel-tools": "^1.3",
         "uspdev/laravel-usp-theme": "^2.8",
